--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # jpa sql view
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # session
 server.servlet.session.tracking-modes=cookie
 # logging
-debug=true
 logging.level.techcourse.myblog=DEBUG
 # livereload
 spring.devtools.livereload.enabled=true
