--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,25 @@ caches:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r jwp-blog *
+  - mkdir -p deploy
+  - mv jwp-blog.zip deploy/jwp-blog.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
+    bucket: jwp-blog
+    region: ap-notheast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
     recipients:
       - dpudpu11@gmail.com
-
