--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,17 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
+  - provide: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: jwp-blog
+    key: jwp-blog.zip
+    bundle_type: zip
+    application: jwp-blog
+    deployment_group: jwp-blog-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
