--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
-  - provide: codedeploy
+  - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: jwp-blog
