--- a/appspec.yml
+++ b/appspec.yml
@@ -12,7 +12,16 @@ permissions:
     group: ec2-user
 
 hooks:
-  ApplicationStart:
-    - location: deploy.sh
+  AfterInstall:
+    - location: stop.sh
       timeout: 60
       runas: ec2-user
+  ApplicationStart:
+    - location: start.sh
+      timeout: 60
+      runas: ec2-user
+  ValidateService:
+    - location: health.sh
+      timeout: 60
+      runas: ec2-user
+
